--- a/Project.Rmd
+++ b/Project.Rmd
@@ -7,6 +7,7 @@ output:
 ```{r setup, include=FALSE}
 set.seed(123)     #setting seed
 knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning = FALSE)
+print("trial")
 ```
 
 ## Splitting Data
