--- a/Project.Rmd
+++ b/Project.Rmd
@@ -8,27 +8,100 @@ output:
 ```{r setup, include=FALSE}
 set.seed(123)     #setting seed
 knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning = FALSE)
-print("trial")
 ```
 
 ##Data preprocessing
 ```{r}
-#catData <- data %>%
-#        select(!where(is.numeric))
-
 data <- read.csv("ames2000_NAfix.csv", stringsAsFactors = TRUE)
-data <- data[,-9] #removing utilities because it only has one type of value
-data <- data[,-79] #removing the sales price too
+```
+
+```{Ordinal Variable Transformation}
+Convert_ordinal <- function(dict, row) {
+  data[, row] = as.character(data[, row])
+  for (i in 1:2000) {
+     data[i, row] = dict[data[i, row]]
+  }
+  return (factor(data[, row])) # ordinal to their values
+}
+
+Lot.Shape.Order = c("IR3" = "1", "IR2" = "2", "IR1" = "3", "Reg" = "4")
+data[, 7] <- Convert_ordinal(Lot.Shape.Order, 7)
+
+Land.Slope.Order = c("Sev" = "1", "Mod" = "2", "Gtl" = "3")
+data[, 11] <- Convert_ordinal(Land.Slope.Order, 11)
+
+data$Overall.Qual = factor(data$Overall.Qual)
+data$Overall.Cond = factor(data$Overall.Cond)
+
+Qual.Order = c("Po" = "1", "Fa" = "2", "TA" = "3", "Gd" = "4", "Ex" = "5")
+data[, 27] <- Convert_ordinal(Qual.Order, 27) # Exter.Qual to numerical order
+data[, 28] <- Convert_ordinal(Qual.Order, 28) # Exter.Cond to numerical order
+data[, 30] <- Convert_ordinal(Qual.Order, 30) # Bsmt.Qual to numerical order
+data[, 31] <- Convert_ordinal(Qual.Order, 31) # Bsmt.Cond to numerical order
+data[, 40] <- Convert_ordinal(Qual.Order, 40) # HeatingQC to numerical order
+data[, 53] <- Convert_ordinal(Qual.Order, 53) # KitchenQual to numerical order
+data[, 57] <- Convert_ordinal(Qual.Order, 57) # FireplaceQu to numerical order
+data[, 63] <- Convert_ordinal(Qual.Order, 63) # Garage.Qual to numerical order
+data[, 64] <- Convert_ordinal(Qual.Order, 64) # Garage.Cond to numerical order
+data[, 72] <- Convert_ordinal(Qual.Order, 72) # Pool.QC to numerical order
+
+Bsmt.Exposure.Order = c("No" = "1", "Mn" = "2", "Av" = "3", "Gd" = "4")
+data[, 32] <- Convert_ordinal(Bsmt.Exposure.Order, 32) #Bsmt.Exposure to numerical order
+
+BsmtFin.Order = c("Unf" = "1", "LwQ" = "2", "Rec" = "3", "BLQ" = "4", "ALQ", "5", "GLQ" = "6")
+data[, 33] <- Convert_ordinal(BsmtFin.Order, 33) # BsmtFin.Type.1 to numerical order
+data[, 35] <- Convert_ordinal(BsmtFin.Order, 35) # BsmtFin.Type.2 to numerical order
+
+Electrical.Order = c("Mix" = "1", "FuseP" = "2", "FuseF" = "3", "FuseA" = "4", "SBrkr" = "5")
+data[, 42] <- Convert_ordinal(Electrical.Order, 42) # Electrical to numerical order
+
+Functional.Order = c("Sal" = "1", "Sev" = "2", "Maj2" = "3", "Maj1" = "4", "Mod" = "5", "Min2" = "6", "Min1" = "7", "Typ" = "8")
+data[, 55] <- Convert_ordinal(Functional.Order, 55) # Functional to numerical order
+
+Garage.Finish.Order = c("Unf" = "1", "RFn" = "2", "Fin" = "3")
+data[, 60] <- Convert_ordinal(Garage.Finish.Order, 60) # Garage Finish to numerical order
+
+Paved.Drive.Order = c("N" = "1", "P" = "2", "Y" = "3")
+data[, 65] <- Convert_ordinal(Paved.Drive.Order, 65) # Paved Drive to numerical order
+
+Fence.Order = c("MnWw" = "1", "GdWo" = "2", "MnPrv" = "3", "GdPrv" = "4")
+data[, 73] <- Convert_ordinal(Fence.Order, 73) # Fence to numerical order
+```
+
+```{Continuous transformation}
+# Bsmt.Full.Bath and the following variables should be factored or kept as numerical?
+
+data$Lot.Frontage = as.integer(data$Lot.Frontage)
+data$Mas.Vnr.Area = as.integer(data$Mas.Vnr.Area)
+data$BsmtFin.SF.1 = as.integer(data$BsmtFin.SF.1)
+data$BsmtFin.SF.2 = as.integer(data$BsmtFin.SF.2)
+data$Bsmt.Unf.SF = as.integer(data$Bsmt.Unf.SF)
+data$Total.Bsmt.SF = as.integer(data$Total.Bsmt.SF)
+data$Garage.Yr.Blt = as.integer(data$Garage.Yr.Blt)
+data$Garage.Area = as.integer(data$Garage.Area)
+
+```
+
+
+```{Removing certain features}
+# for (i in ordinal_index) {
+#   data[, i]
+# }
+sale_price <- data[, 80] # extracting sale price (y)
+data <- data[,-9] # removing utilities because it only has one type of value
+data <- data[,-79] # removing the sales price too
 
 
 ```
 
 
 ##Splitting the data
-```{r}
+```{Splitting data}
 
 smp_size = floor(0.5 * nrow(data))
 train_Index = sample(seq_len(nrow(data)), size = smp_size)
+trainSale <- sale_price[train_Index]
+testSale <- sale_price[-train_Index]
 trainData <- data[train_Index, ]
 testData <- data[-train_Index, ]  
 ```
@@ -36,7 +109,7 @@ testData <- data[-train_Index, ]
 
 ##Corrplot 
 ```{r}
-
+cont_index <- c(3, 4, 19, 20, 26, 34, 36, 37, 38, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 54, 56, 59, 61, 62, 66, 67, 68, 69, 70, 71, 75, 76, 77)
 
 ```
 
