--- a/Project.Rmd
+++ b/Project.Rmd
@@ -105,9 +105,6 @@ sale_price <- data[, 80] # extracting sale price (y)
 to_remove = c(5, 6, 8, 9, 11, 14, 22, 39, 41, 42, 45, 48, 52, 63, 64, 65, 68, 69, 70, 71, 72, 73, 74, 75)
 
 data <- data[,-to_remove] # removing the ones we don't want
-
-consider = c(2, 13, 35, 36, 47, 49, 50, 55, 57)
-
 ```
 
 ##Splitting the data
@@ -160,5 +157,30 @@ for (i in cont_index[1:length(cont_index)-1]) {
 }
 
 trainData = trainData[-remove_p]
+```
+
+##Evaluating spread for cat. features
+
+```{r}
+
+factors = c()
+for(j in 1:ncol(trainData)){
+  if(is.factor(trainData[,j])) {
+    factors = c(factors, j)
+  }
+}
+
+
+par(mfrow=c(2,2))
+for (j in factors) {
+  boxplot(SalePrice ~ trainData[, j], data = trainData, 
+          main = paste("Sale Price by", names(trainData)[j]),
+          xlab = names(trainData)[j],
+          col = "darkolivegreen2")
+}
+
+remove_x = c(6, 8, 13)
+consider_remove = c(3, 5, 7, 9, 10, 11, 12, 17)
+def_keep = c(1, 4, 15)
 
 ```
