--- a/Project.Rmd
+++ b/Project.Rmd
@@ -70,7 +70,7 @@ Fence.Order = c("MnWw" = "1", "GdWo" = "2", "MnPrv" = "3", "GdPrv" = "4")
 data[, 73] <- Convert_ordinal(Fence.Order, 73) # Fence to numerical order
 ```
 
-```{r, title = Continuous transformation}
+```{r, title = "Continuous transformation"}
 # Bsmt.Full.Bath and the following variables should be factored or kept as numerical?
 
 data$Lot.Frontage = as.integer(data$Lot.Frontage)
@@ -96,10 +96,7 @@ for (y in 1:ncol(data)) {
 }
 ```
 
-```{r, title = Removing certain features}
-# for (i in ordinal_index) {
-#   data[, i]
-# }
+```{r, title = "Removing certain features"}
 sale_price <- data[, 80] # extracting sale price (y)
 
 to_remove = c(5, 6, 8, 9, 11, 14, 22, 39, 41, 42, 45, 48, 52, 63, 64, 65, 68, 69, 70, 71, 72, 73, 74, 75)
@@ -109,7 +106,7 @@ data <- data[,-to_remove] # removing the ones we don't want
 
 ##Splitting the data
 
-```{r, label = Splitting data}
+```{r, label = "Splitting the data"}
 
 smp_size = floor(0.5 * nrow(data))
 train_Index = sample(seq_len(nrow(data)), size = smp_size)
@@ -121,7 +118,7 @@ testData <- data[-train_Index, ]
 
 ##Corrplot
 
-```{r, label = Corrplot on cont. var}
+```{r, label = "Corrplot on cont. var"}
 require(corrplot)
 cont_index <- c()
 for (i in 1:ncol(trainData)) {
@@ -145,8 +142,8 @@ corrplot(correlation, method = "color", tl.cex = 0.5)
 
 ## Removing low correlation cont. var
 
-```{r}
-require('psych')
+```{r, label = "Removing insignificant corr. by corr.test" }
+library('psych')
 corr_p = c()
 remove_p = c()
 for (i in cont_index[1:length(cont_index)-1]) {
@@ -161,7 +158,7 @@ trainData = trainData[-remove_p]
 
 ##Evaluating spread for cat. features
 
-```{r}
+```{r, label = "Visualizing the spread of cat. var and removing some with reasoning mentioned on the write up}
 
 factors = c()
 for(j in 1:ncol(trainData)){
