--- a/Project.Rmd
+++ b/Project.Rmd
@@ -70,7 +70,7 @@ Fence.Order = c("MnWw" = "1", "GdWo" = "2", "MnPrv" = "3", "GdPrv" = "4")
 data[, 73] <- Convert_ordinal(Fence.Order, 73) # Fence to numerical order
 ```
 
-```{r, title = "Continuous transformation"}
+```{r, title = Continuous transformation}
 # Bsmt.Full.Bath and the following variables should be factored or kept as numerical?
 
 data$Lot.Frontage = as.integer(data$Lot.Frontage)
@@ -97,16 +97,20 @@ for (y in 1:ncol(data)) {
 ```
 
 ```{r, title = "Removing certain features"}
+
 sale_price <- data[, 80] # extracting sale price (y)
 
 to_remove = c(5, 6, 8, 9, 11, 14, 22, 39, 41, 42, 45, 48, 52, 63, 64, 65, 68, 69, 70, 71, 72, 73, 74, 75)
 
 data <- data[,-to_remove] # removing the ones we don't want
+
+consider = c(2, 13, 35, 36, 47, 49, 50, 55, 57)
 ```
 
 ##Splitting the data
 
-```{r, label = "Splitting the data"}
+```{r, label = "Splitting data"}
+
 
 smp_size = floor(0.5 * nrow(data))
 train_Index = sample(seq_len(nrow(data)), size = smp_size)
@@ -142,6 +146,20 @@ corrplot(correlation, method = "color", tl.cex = 0.5)
 
 ## Removing low correlation cont. var
 
+```{r}
+
+remove = c()
+for(i in 1:(nrow(correlation)-1)){
+  if(abs(correlation[39,i]) < 0.3){ 
+    remove = c(remove, i)
+  }
+}
+
+trainData = trainData[-cont_index[remove]]
+
+```
+
+
 ```{r, label = "Removing insignificant corr. by corr.test" }
 library('psych')
 corr_p = c()
@@ -176,8 +194,33 @@ for (j in factors) {
           col = "darkolivegreen2")
 }
 
-remove_x = c(6, 8, 13)
-consider_remove = c(3, 5, 7, 9, 10, 11, 12, 17)
-def_keep = c(1, 4, 15)
+remove_cat = c(6, 7, 8, 13, 17)
+trainData = trainData[-remove_cat]
+
+```
+
+##Evaluating spread for cont. features
+
+```{r, label = "Visualizing the spread of cont. var and removing some with reasoning mentioned on the write up"}
+
+cont = c()
+for(j in 1:ncol(trainData)){
+  if(is.numeric(trainData[,j])) {
+    cont = c(cont, j)
+  }
+}
+
+par(mfrow = c(2,2))
+names = colnames(trainData)
+for (i in cont) {
+  hist(trainData[,i], main = names[i], 
+       xlab = names[i], 
+       col = "darkolivegreen2")
+}
+
+remove_con = c(2, 3, 9, 10, 11, 18, 20, 23, 24, 25, 28)
+consider_con = c(12)
+
+
 
 ```
