--- a/Project.Rmd
+++ b/Project.Rmd
@@ -202,9 +202,7 @@ for (i in cont) {
        col = "darkolivegreen2")
 }
 
-remove_con = c(2, 3, 9, 10, 11, 18, 20, 23, 24, 25, 28)
-consider_con = c(12)
-
-
+remove_con = c(2, 7, 8, 9, 10, 11, 16, 19, 23, 25, 26, 27, 28)
+trainData = trainData[-remove_con]
 
 ```
