--- a/Project.Rmd
+++ b/Project.Rmd
@@ -104,7 +104,7 @@ to_remove = c(5, 6, 8, 9, 11, 14, 22, 39, 41, 42, 45, 48, 52, 63, 64, 65, 68, 69
 
 data <- data[,-to_remove] # removing the ones we don't want
 
-consider = c(2, 13, 35, 36, 47, 49, 50, 55, 57)
+
 ```
 
 ##Splitting the data
@@ -115,7 +115,10 @@ train_Index = sample(seq_len(nrow(data)), size = smp_size)
 trainSale <- sale_price[train_Index]
 testSale <- sale_price[-train_Index]
 trainData <- data[train_Index, ]
-testData <- data[-train_Index, ]  
+testData <- data[-train_Index, ] 
+
+treeTrainData = trainData
+treeTestData = testData
 ```
 
 ##Corrplot
@@ -246,7 +249,7 @@ vif
 
 ```
 
-##testing the model on the test dataset
+##testing the linear model on the test dataset
 ```{r}
 #making sure newTestData is formatted correctly, replacing nas with means of column
 newTestData = subset(testData, select = c(MS.SubClass, Lot.Frontage, Exter.Qual, Bsmt.Qual, BsmtFin.Type.1, Fireplaces, Kitchen.Qual, TotRms.AbvGrd, Garage.Cars, Wood.Deck.SF, SalePrice))
@@ -276,4 +279,63 @@ ss_total <- sum((actuals - m_actuals)^2)
 ss_residual <- sum((actuals - predictions)^2, na.rm = TRUE)
 rsquared <- 1 - (ss_residual / ss_total)
 rsquared
+```
+##confint for linear model
+
+```{r}
+confint(lm2, level = 0.95)
+
+```
+
+##Decision tree model
+```{r}
+require(tree)
+trainTree <- tree(SalePrice ~., treeTrainData)
+summary(trainTree)
+
+plot(trainTree)
+text(trainTree, pretty = 0, cex=0.5)
+
+predictionsTree = predict(trainTree, treeTestData)
+
+#pruning
+cv.train <- cv.tree(trainTree)
+plot(cv.train$size, cv.train$dev, type = "b")
+pruneTrain <- prune.tree(trainTree, best = 5)
+plot(pruneTrain)
+text(pruneTrain, pretty = 0)
+
+```
+
+##Calculating MSE for unpruned 
+```{r}
+#computing test mse
+yhat <- predict(trainTree, newdata = treeTestData[1:55])
+actualPrice <- treeTestData$SalePrice
+plot(yhat, actualPrice)
+abline(0, 1)
+test.mse = mean((yhat - actualPrice)^2)
+rmse = sqrt(test.mse)
+print(test.mse)
+print(rmse)
+
+#this model leads to test predictions that are (on average) within approximately $58181.69$ of the true median home value for the census tract.
+
+```
+
+##Calculating MSE for pruned 
+
+```{r}
+yhat <- predict(pruneTrain, newdata = treeTestData[1:55])
+test.prune <- treeTestData$SalePrice
+plot(yhat, test.prune)
+abline(0, 1)
+test.mse.prune = mean((yhat - test.prune)^2)
+rmse.prune = sqrt(test.mse.prune)
+print(test.mse.prune)
+print(rmse.prune)
+
+#this model leads to test predictions that are (on average) within approximately $64058.58$ of the true median home value for the census tract. Pruning gets rid of noise-y things, so the performence is "worse" but more general.
+
+
 ```
